--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
     </mat-card-header>
     <mat-card-content>
       <p>
-        Gordon is hungry and his salad fund is low, please share your CPU with him so he can mine crypto
+        Gordon is hungry and his salad fund is low! Please share your CPU with him so he can mine crypto
         and grow his salad fund.
       </p>
     </mat-card-content>
