--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,11 +11,11 @@
     <mat-card-content>
       <p>
         Gordon is hungry and his salad fund is low! Please share your CPU with him so he can mine crypto
-        and grow his salad fund.
+        and watch his salad fund grow!
       </p>
     </mat-card-content>
   </mat-card>
   <br>
   <br>
-  <button mat-raised-button color='primary'>Feed Gordon</button>
+  <button mat-raised-button color='primary' ng-click='startMiner();'>Feed Gordon</button>
 </div>
