--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,16 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<div class="spinner">
+<mat-spinner color="accent" value="50">
+</mat-spinner>
+<br> 
+<mat-spinner color="seagreen" value="50">
+</mat-spinner>
+</div>
+
 <div style="text-align:center">
   <br>
-  <br>
   <img  alt="Gordon" src="../assets/eating.jpg">
-  <br>
-  <br>
+
   <mat-card class='card'>
     <mat-card-header>
     </mat-card-header>
@@ -15,7 +21,6 @@
       </p>
     </mat-card-content>
   </mat-card>
-  <br>
   <br>
   <button mat-raised-button color='primary' ng-click='startMiner();'>Feed Gordon</button>
 </div>
