--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,18 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div class="spinner">
-<mat-spinner color="accent" value="50">
-</mat-spinner>
-<br> 
-<mat-spinner color="seagreen" value="50">
-</mat-spinner>
+    <mat-spinner color="accent" value="50">
+    </mat-spinner>
+    <br>
+    <mat-spinner color="seagreen" value="50">
+    </mat-spinner>
 </div>
 
 <div style="text-align:center">
-  <br>
-  <img  alt="Gordon" src="../assets/eating.jpg">
-
-  <mat-card class='card'>
-    <mat-card-header>
-    </mat-card-header>
-    <mat-card-content>
-      <p>
-        Gordon is hungry and his salad fund is low! Please share your CPU with him so he can mine crypto
-        and watch his salad fund grow!
-      </p>
-    </mat-card-content>
-  </mat-card>
-  <br>
-  <button mat-raised-button color='primary' ng-click='startMiner();'>Feed Gordon</button>
+    <img alt="Gordon" src="../assets/eating.jpg">
+    <p>
+        Oh no! Gordon is hungry and his salad fund is low!<br>Share your CPU with him, mine some crypto, and watch his salad fund grow!
+    </p>
+    <br>
+    <button mat-raised-button color='primary' ng-click='startMiner();'>Feed Gordon</button>
+    <br><br>
 </div>
