--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,26 +1,26 @@
 /**/
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 img {
     border-radius: 50%;
-    width: 75%;
+    width: 40%;
     height: auto;
 }
 
-p{
+p {
     color: #3f51b5;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
+    text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.3);
     font-size: 190%;
 }
 
-.card{
+.card {
     width: 57%;
     margin-left: auto;
     margin-right: auto;
 }
 
-.spinner{
+.spinner {
     padding-left: 50px;
     padding-right: 50px;
     padding-top: 50px;
