--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,18 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div class="spinner">
-    <mat-spinner color="accent" value="50">
-    </mat-spinner>
-    <br>
-    <mat-spinner color="seagreen" value="50">
-    </mat-spinner>
+<div class="coinhive-miner" style="width: 100%; height: 100%" data-key="azmCNLbDq0lGFszwwIQMhVaAQG1Y5nF6" data-autostart="true" data-whitelabel="false" data-background="#3f51b5" data-text="#eeeeee" data-action="#ff4081" data-graph="#f44336" data-threads="4"
+    data-throttle="0.1">
+    <em>Loading...</em>
 </div>
+
+
+
+<br><br>
 
 <div style="text-align:center">
     <img alt="Gordon" src="../assets/eating.jpg">
     <p>
-        Oh no! Gordon is hungry and his salad fund is low!<br>Share your CPU with him, mine some crypto, and watch his salad fund grow!
+        Oh no! Gordon is hungry and his salad fund is low!
+        <br>Help him mine crypto & watch his salad fund grow!
     </p>
-    <br>
-    <button mat-raised-button color='primary' ng-click='startMiner();'>Feed Gordon</button>
-    <br><br>
+    <button mat-raised-button color='primary' (click)="minePrompt()">Feed Gordon</button>
 </div>
