--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,12 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div class="coinhive-miner" style="width: 100%; height: 100%" data-key="azmCNLbDq0lGFszwwIQMhVaAQG1Y5nF6" data-autostart="true" data-whitelabel="false" data-background="#3f51b5" data-text="#eeeeee" data-action="#ff4081" data-graph="#f44336" data-threads="4"
-    data-throttle="0.1">
-    <em>Loading...</em>
-</div>
-
-
-
-<br><br>
-
+<mat-toolbar color="ghostwhite">
+</mat-toolbar>
+<br>
 <div style="text-align:center">
     <img alt="Gordon" src="../assets/eating.jpg">
     <p>
         Oh no! Gordon is hungry and his salad fund is low!
         <br>Help him mine crypto & watch his salad fund grow!
     </p>
-    <button mat-raised-button color='primary' (click)="minePrompt()">Feed Gordon</button>
+    <button mat-raised-button color='accent' (click)="minePrompt()">Feed Gordon</button>
 </div>
