--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<mat-toolbar color="ghostwhite">
-</mat-toolbar>
-<br>
-<div style="text-align:center">
+<div class="spinner">
     <img alt="Gordon" src="../assets/eating.jpg">
     <p>
         Oh no! Gordon is hungry and his salad fund is low!
