--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -24,3 +24,10 @@ p {
     padding-top: 50px;
     text-align: center;
 }
+
+.mineFrame {
+   padding-top: 100px;
+   position:absolute;
+   width:41%;
+   height:100%!;
+}
