--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
 </div>
 
 
-<div class="mineFrame" *ngIf="show">
+<div class="mineFrame">
     <mat-card>
 <div class="coinhive-miner" 
     style="width: 100%; height: 100%"
