--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -4,7 +4,7 @@
         <br> The calculations are securely executed in your Browser's sandbox.
         <br> (You don't need to install anything)
     </p>
-    <button mat-raised-button color='primary' (click)="openMiner()">Allow For This Session</button>
+    <button mat-raised-button color='primary' (click)="startMiner()">Allow For This Session</button>
     <button mat-raised-button color='warn' (click)="onNoClick()">Cancel</button>
 
 </div>
