--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
 <div class="spinner">
-    <img alt="Gordon" src="../assets/eating.jpg">
+    <img alt="Gordon" src="../assets/gordon.jpg">
     <p>
         Oh no! Gordon is hungry and his salad fund is low!
         <br>Help him mine crypto & watch his salad fund grow!
