--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -3,7 +3,7 @@
         Enter a name so Gordon knows who to thank:
     </p>
     <mat-form-field class="example-full-width">
-        <input matInput placeholder="Name" value="Sushi">
+        <input matInput placeholder="Name">
     </mat-form-field>
     <button mat-raised-button color='primary' (click)="openMiner()">Start</button>
     <button mat-raised-button color='warn' (click)="onNoClick()">Cancel</button>
