--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -1,10 +1,10 @@
 <div style="text-align: center">
-    <p>
-        Enter a name so Gordon knows who to thank:
-    </p>
-    <mat-form-field class="example-full-width">
-        <input matInput placeholder="Name">
-    </mat-form-field>
+    <p>Enter a name so Gordon knows who to thank.</p>
+
+        <mat-form-field>
+            <textarea matInput [(ngModel)]="model.minerName" name="minerName"></textarea>
+        </mat-form-field>
+
     <button mat-raised-button color='primary' (click)="openMiner()">Start</button>
     <button mat-raised-button color='warn' (click)="onNoClick()">Cancel</button>
 
