--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -2,7 +2,7 @@
     <p>Enter a name so Gordon knows who to thank.</p>
 
         <mat-form-field>
-            <textarea matInput [(ngModel)]="model.minerName" name="minerName"></textarea>
+            <textarea matInput [(ngModel)]="model.minerName" name="name"></textarea>
         </mat-form-field>
 
     <button mat-raised-button color='primary' (click)="openMiner()">Start</button>
