--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -2,7 +2,7 @@
     <p>Enter a name so Gordon knows who to thank.</p>
 
         <mat-form-field>
-            <input matInput [(ngModel)]="model.minerName" minerName="name">
+            <input matInput [(ngModel)]="model.minerName" minerName="minerName">
         </mat-form-field>
 
     <button mat-raised-button color='primary' (click)="openMiner()">Start</button>
