--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,19 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<div class="container">
+    <div class="row">
+        <div class="col-md">
+            {{hashesPerSecond}}
+        </div>
+        <div class="col-md">
+            {{totalHashes}}
+        </div>
+        <div class="col-sm">
+            {{acceptedHashes}}
+        </div>
+    </div>
+</div>
+
+
 
 <div class="spinner">
     <img alt="Gordon" src="../assets/gordon.jpg">
