--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,9 @@
 /**/
 
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+/* Create two equal columns that floats next to each other */
+
 img {
     border-radius: 50%;
     width: 40%;
@@ -26,8 +29,8 @@ p {
 }
 
 .mineFrame {
-   padding-top: 100px;
-   position:absolute;
-   width:41%;
-   height:100%!;
+    padding-top: 100px;
+    position: absolute;
+    width: 41%;
+    height: 100%!;
 }
