--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,13 +2,13 @@
 <div class="container">
     <div class="row">
         <div class="col-md">
-            {{hashesPerSecond}}
+            0{{hashesPerSecond}}
         </div>
         <div class="col-md">
-            {{totalHashes}}
+            0{{totalHashes}}
         </div>
         <div class="col-sm">
-            {{acceptedHashes}}
+           0{{acceptedHashes}}
         </div>
     </div>
 </div>
