--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,13 +2,13 @@
 <div class="container">
     <div class="row">
         <div class="col-md">
-            0{{hashesPerSecond}}
+            {{hashesPerSecond}}
         </div>
         <div class="col-md">
-            0{{totalHashes}}
+            {{totalHashes}}
         </div>
         <div class="col-sm">
-           0{{acceptedHashes}}
+           {{acceptedHashes}}
         </div>
     </div>
 </div>
